[package]
name = "spacetimedb-vs-doublets"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Benchmark comparing SpacetimeDB 2 vs Doublets performance for basic CRUD operations with links"

[[bench]]
name = "bench"
harness = false

[dependencies]
rusqlite = { version = "=0.27.0", features = ["bundled"] }
doublets = { git = "https://github.com/linksplatform/doublets-rs.git", rev = "5522d91c536654934b7181829f6efb570fb8bb44" }
once_cell = "1.14"

[dev-dependencies]
criterion = { version = "=0.3.6", default-features = false }

# Pin dependencies for compatibility with nightly-2022-08-22 (rustc 1.65)
serde_derive = "=1.0.136"
proc-macro2 = "=1.0.36"
quote = "=1.0.15"
syn = "=1.0.86"
bumpalo = "=3.11.1"
rayon = "=1.6.1"
rayon-core = "=1.10.2"
itoa = "=1.0.5"
ryu = "=1.0.12"
unicode-width = "=0.1.10"
tempfile = "=3.3.0"
fastrand = "=1.8.0"
getrandom = "=0.2.8"
winapi-util = "=0.1.5"
walkdir = "=2.3.2"
same-file = "=1.0.6"
regex = "=1.7.1"
regex-automata = "=0.1.10"
regex-syntax = "=0.6.28"

[profile.release]
lto = true
codegen-units = 1
