[package]
name = "spacetimedb-vs-doublets"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Benchmark comparing SpacetimeDB 2 vs Doublets performance for basic CRUD operations with links"

[[bench]]
name = "bench"
harness = false

[dependencies]
# SpacetimeDB 2.0 official Rust client SDK.
spacetimedb-sdk = "2"
# Use patched doublets that is compatible with modern nightly (>= 1.93.0).
# The pinned git revision uses removed nightly features (generators, const_trait_impl,
# const_deref, etc.) incompatible with Rust >= 1.80.0. The local patch:
# - Removes unused #![feature(generators)] from doublets/src/lib.rs
# - Patches dev-deps/data-rs to use non-const fn instead of removed ~const syntax
# - Patches dev-deps/mem-rs to remove removed const feature flags
doublets = { path = "doublets-patched/doublets" }
# platform-mem is the memory abstraction layer used by doublets; we depend on it
# directly to access FileMapped for file-backed (non-volatile) doublets stores.
platform-mem = { path = "doublets-patched/dev-deps/mem-rs", package = "platform-mem" }
once_cell = "1.14"

[dev-dependencies]
criterion = { version = "=0.3.6", default-features = false }

[profile.release]
lto = true
codegen-units = 1
